# rustlefeed

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker.sh  index.html  test-all.sh
assets/: feed-style.css  index.html  index.js  style.css
feed-sync/: Cargo.toml
feed-sync/mocks/: rss.xml
feed-sync/src/: lib.rs  parser.rs  persistence.rs
naive_classifier/: Cargo.toml
naive_classifier/src/: lib.rs
rss-sync/: Cargo.toml
rss-sync/src/: lib.rs  parser.rs  rss_manager.rs
src/: main.rs
