workspace = { members = [ "feed-sync", "naive_classifier"] }
[package]
name = "rustlefeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5", features = ["json"]}
serde = { version = "1.0", features = ["derive"] } 
tokio = { version = "^1.36.0", features = ["full"] }
feed-sync = { path = "feed-sync" }
ws = "0.9.2"
naive_classifier = { path = "naive_classifier" }
feed-rs = {git = "https://github.com/eramoss/feed-rs.git" ,branch = "default_text"}