[package]
name = "feed-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = {git = "https://github.com/eramoss/feed-rs.git" ,branch = "master"}
reqwest = "0.11.24"
mockito = "1.3.1"
tokio = { version = "^1.36.0", features = ["full"] }
