[package]
name = "rss-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockito = "1.3.0"
reqwest = "0.11.24"
rss = "2.0.7"
tempfile = "3.10.0"
tokio = {version = "1.36.0", features = ["macros"]}
rusqlite = { version = "0.31.0", features = ["bundled"] }
